# symbolica

./: Cargo.toml  README.md
.github/workflows/: audit.yml  rust.yml
examples/: visualize.rs
src/: constants.rs  equivalencies.rs  lib.rs  operation_properties.rs  operations.rs  rewrite.rs  symbols.rs
