[package]
name = "symbolica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pretty_debug = []

[dev-dependencies]
eframe = { version = "0.21" }
anyhow = "1.0"

[dependencies]
ahash = "0.8.3"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = "0.12.1"
smallvec = { version = "1.10.0", features = ["union", "const_generics", "const_new"] }
